layout section about

--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
     <title>Alejandro Rivera</title>
 </head>
 <body>
-    Hello Alejandro
+    <div class="container">
+
+        <section class="section-about" id=""section-about"" >
+
+            <div class="section-about__video">video
+                <!-- <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                    <source src="./img/palm-hair.mp4" type="video/mp4">                    
+                        YOUR BROWSER IS NOT SUPPORTED!                            
+                    </video>
+                </div> -->
+            </div>
+
+            <div class="section-about__description">
+                description
+            </div>
+
+        </section>
+            
+    </div>
+    
 </body>
 </html>
