--- a/index.html
+++ b/index.html
@@ -13,22 +13,21 @@
 <body>
     <div class="container">
 
-        <section class="section-about" id=""section-about"" >
+        <section class="section-about">
+            <header class="header">
+                <div class="header__image">                    
+                    &nbsp;
+                </div>
+                <div class="header__text-box">
+                    <h1 class="header__text"></h1>
+                        <span class="header__text--name">Alejandro</span>                        
+                        <span class="header__text--symbol">/</span>                        
+                        <span class="header__text--surname">Rivera</span>
+                    </h1>                
+                </div>
+            </section>
+        </div>
 
-            <div class="section-about__video">video
-                <!-- <div class="bg-video">
-                    <video class="bg-video__content" autoplay muted loop>
-                    <source src="./img/palm-hair.mp4" type="video/mp4">                    
-                        YOUR BROWSER IS NOT SUPPORTED!                            
-                    </video>
-                </div> -->
-            </div>
-
-            <div class="section-about__description">
-                description
-            </div>
-
-        </section>
             
     </div>
     
