file img ignored

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <section class="section section-about">                
             <div class="bg-video">
                 <video class="bg-video__content" autoplay muted loop>
-                    <source src="./img/Typing_dark_03_Videvo.mov" type="video/mp4">
-                    <source src="./img/Typing_dark_03_Videvo.mov" type="video/webm">
-                    <source src="./img/Typing_dark_03_Videvo.mov" type="video/mov">
+                    <source src="./img/Typing_dark.mov" type="video/mp4">
+                    <source src="./img/Typing_dark.mov" type="video/webm">
+                    <source src="./img/Typing_dark.mov" type="video/mov">
                                 YOUR BROWSER IS NOT SUPPORTED!                            
                 </video>
             </div>
