some projects added and footer refactored

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             </div>
                         </div>
                         <div class="project__btn-box">
-                            <a href="#" class="btn project__btn">
+                            <a href="/projects/budgety/index.html" class="btn project__btn">
                                 <svg>
                                     <rect></rect>
                                 </svg>
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                         <div class="project__btn-box">
-                            <a href="#" class="btn project__btn">
+                            <a href="/projects/fancy-house/index.html" class="btn project__btn">
                                 <svg>
                                     <rect></rect>
                                 </svg>
@@ -135,7 +135,7 @@
                             </div>
                         </div>
                         <div class="project__btn-box">
-                            <a href="#" class="btn project__btn">
+                            <a href="/projects/travel-agency/index.html" class="btn project__btn">
                                 <svg>
                                     <rect></rect>
                                 </svg>
@@ -342,56 +342,56 @@
         <!-- FOOTER  -->
         <footer class="footer">
             <!-- FORM  -->
-            <div class="footer__form">
+            <div class="form-container">
                 <!-- FOOTER TITLE  -->
-                <div class="footer__form--title">Contact</div>
+                <div class="form__title">Contact</div>
                 <!-- FOOTER FORM  -->
-                <form class="footer__form-box" action="#">
-                    <div class="footer__group footer__group--1">
-                        <input class="footer__input" type="text" id="name" name="name" placeholder="Name" /required>
-                            <label class="footer__label" for="name">Name</label>
+                <form class="form" action="#">
+                    <div class="form__group form__group--1">
+                        <input class="form__input" type="text" id="name" name="name" placeholder="Name" /required>
+                        <label class="form__label" for="name">Name</label>
                     </div>
-                    <div class="footer__group footer__group--2">
-                        <input class="footer__input" type="email" id="email" name="email" placeholder="E-mail"/required>
-                            <label class="footer__label" for="email">E-mail</label>
+                    <div class="form__group form__group--2">
+                        <input class="form__input" type="email" id="email" name="email" placeholder="E-mail"/required>
+                        <label class="form__label" for="email">E-mail</label>
                     </div>
-                    <div class="footer__group footer__group--3">
-                        <textarea class="footer__input" type="message" id="message" name="Message" rows="3"
-                            placeholder="Message . . . ." /required> </textarea> </div> <div
-                            class="footer__group footer__group--4">
-                        <input class="footer__btn-form" type="submit" value="Submit">      
+                    <div class="form__group form__group--3">
+                        <textarea class="form__input" type="message" id="message" name="Message" rows="4" placeholder="Message here . . ." /required></textarea>                        
+                     </div>
+                      <div class="form__group form__group--4">
+                        <input class="form__btn" type="submit" value="Submit">      
                     </div>                    
                 </form>               
             </div>
 
             <!-- FOOTER SOCIAL  -->
-            <div class="footer__social">
+            <div class="social">
                 <!-- FOOTER ICONS  -->
-                <div class="footer__icon-box">
-                    <a href="#" class="footer__icon-box--link">
-                        <svg class="footer__icon-box--item">
+                <div class="social__icon-box">
+                    <a href="#" class="social__icon-box--link" target="blank">
+                        <svg class="social__icon-box--item">
                             <use xlink:href="img/svg/sprite.svg#icon-linkedin"></use>
                         </svg>                
                     </a>
-                    <a href="#" class="footer__icon-box--link">
-                        <svg class="footer__icon-box--item">
+                    <a href="#" class="social__icon-box--link" target="blank">
+                        <svg class="social__icon-box--item">
                             <use xlink:href="img/svg/sprite.svg#icon-github"></use>
                         </svg>                
                     </a>
-                    <a href="#" class="footer__icon-box--link">
-                        <svg class="footer__icon-box--item">
+                    <a href="#" class="social__icon-box--link" target="blank">
+                        <svg class="social__icon-box--item">
                             <use xlink:href="img/svg/sprite.svg#icon-codepen"></use>
                         </svg>                
                     </a>
-                    <a href="#" class="footer__icon-box--link">
-                        <svg class="footer__icon-box--item">
+                    <a href="https://google.com" class="social__icon-box--link" target="blank">
+                        <svg class="social__icon-box--item">
                             <use xlink:href="img/svg/sprite.svg#icon-envelope"></use>
                         </svg>             
                     </a>
                 </div>
     
                 <!-- COPYRIGHT  -->
-                <div class="footer__copyright">&copy; copyright 2020, Alejandro Rivera, All rights reserved.</div>
+                <div class="social__copyright">&copy; copyright 2020, Alejandro Rivera, All rights reserved.</div>
             </div>
                   
         </footer>
