--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="main__container">
         <!-- HEADER  -->
         <header class="header">
-            <div class="hexagons-box">
+            <div class="hexagons-box" id="hexagons-box">
                 <div class="row">
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
@@ -43,7 +43,7 @@
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
-                  </div>
+                </div>
                 <div class="row">
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
@@ -70,7 +70,7 @@
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
-                  </div>
+                </div>
                 <div class="row">
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
@@ -97,7 +97,7 @@
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
-                  </div>
+                </div>
                 <div class="row">
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
@@ -124,7 +124,7 @@
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
-                  </div>
+                </div>
                 <div class="row">
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
@@ -151,7 +151,7 @@
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
-                  </div>
+                </div>
                 <div class="row">
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
@@ -178,7 +178,7 @@
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
-                  </div>
+                </div>
                 <div class="row">
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
@@ -205,7 +205,7 @@
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
-                  </div>
+                </div>
                 <div class="row">
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
@@ -232,7 +232,7 @@
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
-                  </div>
+                </div>
                 <div class="row">
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
@@ -259,7 +259,7 @@
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
-                  </div>
+                </div>
                 <div class="row">
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
@@ -286,79 +286,54 @@
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
-                  </div>
-                <div class="row">
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                  </div>
-                <div class="row">
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                    <div class="hexagon"></div>
-                  </div>
+                </div>
             </div>
         </header>
 
         <!-- NAVIGATION -->
-        <nav class="navigation">
-            <ul class="nav-container ">
-                <li class="nav-item">about</li>
-                <li class="nav-item">projects</li>
-                <li class="nav-item">skills</li>
-                <li class="nav-item">contact</li>
+        <nav class="nav">
+            <ul class="nav__container ">
+                <a href="#about">
+                    <li class="nav__item">
+                        <div class="nav__link">about</div>
+                        <svg class="nav__icon">
+                            <use xlink:href="img/svg/sprite.svg#icon-user"></use>
+                        </svg>
+                    </li>
+                </a>
+                <a href="#projects">
+                    <li class="nav__item">
+                        <div class="nav__link">projects</div>
+                        <svg class="nav__icon">
+                            <use xlink:href="img/svg/sprite.svg#icon-suitcase"></use>
+                        </svg>
+                    </li>
+                </a>
+                <a href="#skills">
+                    <li class="nav__item">
+                        <div class="nav__link">skills</div>
+                        <svg class="nav__icon">
+                            <use xlink:href="img/svg/sprite.svg#icon-embed2"></use>
+                        </svg>
+                    </li>
+                </a>
+                <a href="#contact">
+                    <li class="nav__item">
+                        <div class="nav__link">contact</div>
+                        <svg class="nav__icon">
+                            <use xlink:href="img/svg/sprite.svg#icon-paper-plane"></use>
+                        </svg>
+                    </li>
+                </a>
+                
             </ul>
         </nav>
 
         <!-- ABOUT  -->
-        <section class="about">about</section>
+        <section class="about" id="about">about</section>
 
         <!-- PROJECTS  -->
-        <section class="projects">
+        <section class="projects" id="projects">
             <div class="projects__container">
                 <div class="card">
                     <!-- CARD FRONT  -->
@@ -488,7 +463,7 @@
         </section>
 
         <!-- SKILLS  -->
-        <section class="skills">
+        <section class="skills" id="skills">
             <div class="skills__box">
                 <div class="skills__content">
                     <!-- CARD 1  -->
@@ -678,7 +653,7 @@
             <!-- FORM  -->
             <div class="form-container">
                 <!-- FOOTER TITLE  -->
-                <div class="form__title">Contact</div>
+                <div class="form__title" id="contact">Contact</div>
                 <!-- FOOTER FORM  -->
                 <form class="form" action="#">
                     <div class="form__group form__group--1">
