--- a/projects/natours/index.html
+++ b/projects/natours/index.html
@@ -12,6 +12,16 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-175575724-1');
+    </script>
 
     <title>Natours | Exciting tours for adventurous people</title>
 </head>
