section titles added to mini media query

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
         <nav class="nav">
             <!-- LOGO  -->
             <!-- logomaker.thehoth.com/?project=45900930  -->
-            <!-- logomaker.thehoth.com/?project=45900930  -->
             <div class="nav__logo">
                 <a href="#header" class="logo__link ">
                     <img src="./img/logo/logo5.png" alt="" class="logo__icon">
@@ -69,10 +68,10 @@
 
         <!-- ABOUT  -->
         <section class="about" id="about">
-            <div class="section__title title-color--salsa" >This is me</div>
+            <div class="section__title title-color--salsa" >who is this guy</div>
             <div class="about-box">
                 <div class="hex-shape about-box__item about-box__item--1"><span> software developer </span></div>
-                <div class="hex-shape about-box__item about-box__item--2"><span> UX/UI enthusiast<br>open source fan
+                <div class="hex-shape about-box__item about-box__item--2"><span> UI/UX enthusiast<br>open source fan
                     </span></div>
                 <div class="hex-shape about-box__item about-box__item--3"><span> freelance </span></div>
                 <div class="hex-shape outter-hex">
@@ -621,7 +620,7 @@
             <!-- FORM  -->
             <div class="form-container">
                 <!-- FOOTER TITLE  -->
-                <div class="section__title">Contact</div>
+                <div class="section__title">get in touch</div>
                 <!-- FOOTER FORM  -->
                 <form class="form" action="https://formspree.io/alejandro.rivera.m18@gmail.com" method="POST">
                     <div class="form__group form__group--1">
