touch events in cards fixed for mobile view

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="I am a Software developer, this is my personal website ">
+    <meta name="description" content="I am a Software developer. This is my personal website, have a look at my projects and skill. Please reach out if you have a project you have in mind or any other questions">
     <meta name="author" content="Alejandro Rivera">
+    <meta name="keywords" content="Alejandro, Rivera, Alejandro Rivera, Software Engineer, Web Developer, Developer, Frontend, Java, React, HTML, CSS, JavaScript, AWS, UI, UX, Responsive">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/logo/logo5.png">
     <!-- Global site tag (gtag.js) - Google Analytics -->
